<resources>
    <string name="app_name">Vehicle Equalizer</string>

    <!-- Button names -->
    <string name="reset_button">Reset</string>
    <string name="save_button">Save</string>
    <string name="new_profile_button">New</string>
    <string name="agree_button_name">OK</string>
    <string name="cancel_button_name">Cancel</string>
    <string name="positive_button_name">Yes</string>
    <string name="negative_button_name">No</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next track</string>
    <string name="previous">Previous track</string>

    <!-- Default values for graphical interface parameters -->
    <string name="default_db_value">0db</string>
    <string name="default_pan_value">Center</string>
    <string name="default_volume_value">0%</string>
    <string name="default_profile">Default</string>

    <!-- Name of the seekBar equalizer components -->
    <string name="bar_treble_name">Treble</string>
    <string name="bar_mid_name">Middle</string>
    <string name="bar_bass_name">Bass</string>
    <string name="balance_left">Left</string>
    <string name="balance_Right">Right</string>
    <string name="volume_name">Volume</string>

    <!-- String from the new profile dialog box -->
    <string name="dialogue_title">Profile Name</string>
    <string name="default_name_new_profile">New Profile</string>

    <!-- Units of measurement for audio signals -->
    <string name="decibel">db</string>
    <string name="spl">%s%%</string>

    <!-- String profile list -->
    <string name="sub_text">Profile</string>

    <!-- Informative messages -->
    <string name="saved">Saved successfully!</string>
    <string name="exclusion">Confirm exclusion</string>
    <string name="confirmation_question_delete">Do you want to delete profile %s?</string>
    <string name="profile_cannot_deleted">Cannot delete %s profile.</string>
    <string name="current_profile">Profile %s selected</string>

    <!-- Interface labels -->
    <string name="track_title_default">Music</string>
    <string name="time_default">00:00 / 00:00</string>
    <string name="time_format">%1$s / %2$s</string>
    <string name="time_mm_ss">%1$02d:%2$02d</string>
    <string name="active_equalizer">Active Equalizer</string>
    <string name="frequencySecondBand">230Hz</string>
    <string name="frequencyFirstBand">60Hz</string>
    <string name="frequencyThirdBand">910Hz</string>
    <string name="frequencyFifthBand">14kHz</string>
    <string name="frequencyFourthBand">3.6kHz</string>
    <string name="_0_db">0 dB</string>
    <string name="percentage_value">%d%%</string>
    <string name="back">Back</string>

</resources>